--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       </section>
       <!--Frequently Asked Questions end-->
       <!--Trusted by over 800+ companies start-->
-      <section class="mt-5 d-none d-md-block">
+      <section class="mt-5 d-none d-md-none">
         <h1 class="text-center">Trusted by over 800+ companies</h1>
         <div class="container d-flex justify-content-around pt-3">
           <div>
