--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
           <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
         </div>
         <div class="container my-5">
-          <div class="row g-4 gy-4 catagoris">
-            
-           <div class="row row-cols-lg-2 col-md-12 col-sm-12">
+           <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 g-4">
               <div class="">
               <div class="border border-2 bg-white rounded d-flex align-items-center">
                 <div>
@@ -196,7 +194,6 @@
               </div>
             
             </div>
-        </div>
         </div>
       </section>
       <!--Discover Our Popular Courses end-->
