--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <p class="text-white">It is a long established fact that a reader will be distracted by the<br> readable content of a page when looking at its layout.</p>
             </div>
             <div>
-              <a href="#">
+              <a href="index2.html" target="_blank">
                 <button class="btn bg-white">Register Now</button>
               </a>
             </div>
